# psoc-start

./: .gitignore  README.md
psoc/Rust/: Rust.cywrk
psoc/Rust/minimum_rust_start.cydsn/: main_cm0p.c  main_cm4.c  makefile  minimum_rust_start.cyfit  minimum_rust_start.cyprj  minimum_rust_start.cyprj.Dave  platform_debug.mk  platform_release.mk
psoc/Rust/minimum_rust_start.cydsn/Export/: PSoCCreatorExportIDECortexM0p.xml  PSoCCreatorExportIDECortexM4.xml
psoc/Rust/minimum_rust_start.cydsn/Generated_Source/PSoC6/: cyfitter.h
psoc/Rust/minimum_rust_start.cydsn/TopDesign/: TopDesign.cysch
psoc/Rust/minimum_rust_start.cydsn/codegentemp/: elab_dependencies.txt  generated_files.txt  minimum_rust_start.ctl  minimum_rust_start.pci  minimum_rust_start.pco  minimum_rust_start.rpt  minimum_rust_start.rt_log  minimum_rust_start.sdc  minimum_rust_start.sdf  minimum_rust_start.v  minimum_rust_start.vh2  minimum_rust_start.wde  minimum_rust_start_p.vh2  minimum_rust_start_r.vh2  minimum_rust_start_t.vh2  minimum_rust_start_timing.html  minimum_rust_start_u.sdc  project_ids.txt  referenced_files.txt  warp_dependencies.txt
psoc/Rust/minimum_rust_start.cydsn/codegentemp/lcpsoc3/: index
start/: Cargo.toml  README.md  build.rs  build_debug.nu  build_release.nu  calc_lib_sizes.nu  post_build.nu  start.h
start/.cargo/: config.toml
start/src/: lib.rs
