[package]
name = "start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "start"
#crate-type = ["cdylib"]      # Creates dynamic lib
crate-type = ["staticlib"] # Creates static lib


[dependencies]
psoc6-hal = {git = "https://github.com/diagonalDave/psoc6-hal.git"}
cortex-m = "0.7.6"
panic-semihosting = "0.6.0"


[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = false
lto = true
